--- a/package.json
+++ b/package.json
@@ -12,11 +12,11 @@
     "browser-sync": "^2.18.13",
     "cssnano": "^3.10.0",
     "gulp": "^3.9.1",
+    "gulp-clean-css": "^3.9.0",
     "gulp-sass": "^3.1.0",
     "gulp-sass-lint": "^1.3.2",
     "gulp-uglify": "^3.0.0",
     "pump": "^1.0.2"
   },
-  "dependencies": {
-  }
+  "dependencies": {}
 }
